# peeves

./: .gitignore  CMakeLists.txt
src/: cmdline.c  cmdline.ggo  cmdline.h  foundation.h  logger.c  logger.h  main.c  status.h
